--- a/app/src/main/res/drawable-nodpi/ic_add_white_vector.xml
+++ b/app/src/main/res/drawable-nodpi/ic_add_white_vector.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="357"
     android:viewportHeight="357">
   <path
-      android:fillColor="#FFFF00"
+      android:fillColor="#FFFFFF"
       android:pathData="M357,204H204v153h-51V204H0v-51h153V0h51v153h153V204z"/>
 </vector>
