--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorTextSecondary">#737373</color>
     <color name="gainsBoro">#b9b9b9</color>
     <color name="whiteSmoke">#f4f4f4</color>
+    <color name="purple">#9D46FF</color>
+    <color name="colorLightBlue">#6200EA</color>
 </resources>
